Updating the layout

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="Logo do GlauGurumi">
+            <img src="images/logo.jpeg" alt="Logo do GlauGurumi">
         </div>
         <h1>GlauGurumi</h1>
     </header>
 
     <section id="intro">
-        <p>Criações únicas feitas à mão e dedicação.</p>
+        <p>Sou uma exploradora de crochê desde os meus 10 anos. 
+            Esta página é meu cantinho para compartilhar a reprodução de receita e criação de novas peças 🧶
+        </p>
     </section>
 
     <section id="galeria">
@@ -23,11 +25,11 @@
         <div class="feed">
             <div class="foto">
                 <img src="images/cat.jpg" alt="Descrição da peça 1">
-                <p>Descrição da peça 1</p>
+                <p>Gatinha feita com inspiração no modelo do Gato Lumi Glow disponível em círculo.com.br/receitas</p>
             </div>
             <div class="foto">
                 <img src="images/finger_heart.jpg" alt="Descrição da peça 2">
-                <p>Descrição da peça 2</p>
+                <p>Finger Heart basead no modelo disponível no Ateliê Toca do Amigu (https://www.youtube.com/watch?v=rnS7Nnusb-4)</p>
             </div>
             <!-- Adicione mais fotos aqui -->
         </div>
@@ -35,7 +37,7 @@
 
     <section id="contato">
         <h2>Contato</h2>
-        <p>Siga-nos no <a href="https://www.instagram.com/seuusuario" target="_blank">Instagram</a></p>
+        <p>Siga-nos no <a href="https://www.instagram.com/glaugurumi/" target="_blank">Instagram</a></p>
     </section>
 
     <footer>
