--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GlauGurumi</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     <header>
@@ -15,7 +17,8 @@
     </header>
 
     <section id="intro">
-        <p>Sou uma exploradora de crochê desde os meus 10 anos. 
+        <p>
+            Sou uma exploradora de crochê desde os meus 10 anos<br>
             Esta página é meu cantinho para compartilhar a reprodução de receita e criação de novas peças 🧶
         </p>
     </section>
@@ -25,19 +28,28 @@
         <div class="feed">
             <div class="foto">
                 <img src="images/cat.jpg" alt="Descrição da peça 1">
-                <p>Gatinha feita com inspiração no modelo do Gato Lumi Glow disponível em círculo.com.br/receitas</p>
+                <p>Gatinha feita com inspiração no modelo do Gato Lumi Glow (disponível em círculo.com.br/receitas)</p>
             </div>
             <div class="foto">
                 <img src="images/finger_heart.jpg" alt="Descrição da peça 2">
-                <p>Finger Heart basead no modelo disponível no Ateliê Toca do Amigu (https://www.youtube.com/watch?v=rnS7Nnusb-4)</p>
+                <p>Finger Heart (receita em https://www.youtube.com/watch?v=rnS7Nnusb-4)</p>
             </div>
-            <!-- Adicione mais fotos aqui -->
+            <!-- Adicionar mais fotos -->
         </div>
     </section>
 
     <section id="contato">
         <h2>Contato</h2>
-        <p>Siga-nos no <a href="https://www.instagram.com/glaugurumi/" target="_blank">Instagram</a></p>
+        <p>Siga-nos no 
+            <a href="https://www.instagram.com/glaugurumi" target="_blank">
+                <img 
+                src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/sprites/solid/instagram.svg" 
+                class="instagram-icon" 
+                alt="Instagram"
+                >
+                Instagram
+            </a>
+        </p>
     </section>
 
     <footer>
