Fix Instagram icon

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             </div>
             <div class="foto">
                 <img src="images/finger_heart.jpg" alt="Descrição da peça 2">
-                <p>Finger Heart (receita em https://www.youtube.com/watch?v=rnS7Nnusb-4)</p>
+                <p>
+                    Coração<br>
+                    (receita em https://www.youtube.com/watch?v=rnS7Nnusb-4)</p>
             </div>
             <!-- Adicionar mais fotos -->
         </div>
@@ -41,11 +43,12 @@
     <section id="contato">
         <h2>Contato</h2>
         <p>Siga-nos no 
-            <a href="https://www.instagram.com/glaugurumi" target="_blank">
+            <a href="https://www.instagram.com/glaugurumi" target="_blank" aria-label="Instagram">
                 <img 
-                src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/sprites/solid/instagram.svg" 
-                class="instagram-icon" 
-                alt="Instagram"
+                    src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/sprites/solid/instagram.svg" 
+                    class="instagram-icon" 
+                    alt="Instagram"
+                    style="vertical-align: middle;" 
                 >
                 Instagram
             </a>
