--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
+
 </head>
 <body>
     <header>
@@ -28,13 +29,19 @@
         <div class="feed">
             <div class="foto">
                 <img src="images/cat.jpg" alt="Descrição da peça 1">
-                <p>Gatinha feita com inspiração no modelo do Gato Lumi Glow (disponível em círculo.com.br/receitas)</p>
+                <p>
+                    Gatinha feita com inspiração no modelo do Gato Lumi Glow (receita em 
+                    <a href="https://www.circulo.com.br/receitas" target="_blank" rel="Círculo">Círculo</a>
+                )</p>
             </div>
             <div class="foto">
                 <img src="images/finger_heart.jpg" alt="Descrição da peça 2">
                 <p>
                     Coração<br>
-                    (receita em https://www.youtube.com/watch?v=rnS7Nnusb-4)</p>
+                    (receita em 
+                    <a href="https://www.youtube.com/watch?v=rnS7Nnusb-4" target="_blank" rel="youtube">
+                        Ateliê Toca do Amigu)
+                    </a>
             </div>
             <!-- Adicionar mais fotos -->
         </div>
@@ -42,15 +49,9 @@
 
     <section id="contato">
         <h2>Contato</h2>
-        <p>Siga-nos no 
-            <a href="https://www.instagram.com/glaugurumi" target="_blank" aria-label="Instagram">
-                <img 
-                    src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/sprites/solid/instagram.svg" 
-                    class="instagram-icon" 
-                    alt="Instagram"
-                    style="vertical-align: middle;" 
-                >
-                Instagram
+        <p>Siga-nos no <br>
+            <a href="https://www.instagram.com/glaugurumi" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-instagram"></i> Instagram - GlauGurumi
             </a>
         </p>
     </section>
